@@ -23,30 +23,81 @@ wxProgressDialog::new( title, message, maximum = 100, parent = 0, style = wxPD_A
     long style
   CODE:
     RETVAL = new wxProgressDialog( title, message, maximum, parent, style );
-  OUTPUT:
-    RETVAL
+  OUTPUT: RETVAL
+
+void
+wxProgressDialog::Resume()
 
 
-#if WXPERL_W_VERSION_GE( 2, 8, 0 )
+#if WXPERL_W_VERSION_GE( 2, 9, 1 )
+
+bool
+wxProgressDialog::Update( value = -1, newmsg = wxEmptyString )
+    int value
+    wxString newmsg
+  PREINIT:
+    bool skipval = false;
+  CODE:
+    RETVAL = THIS->Update( value, newmsg, &skipval);
+    if( skipval )
+        RETVAL = false;
+
+  OUTPUT: RETVAL
+
 
 bool 
 wxProgressDialog::Pulse( newmsg = wxEmptyString )
 	wxString newmsg
+  PREINIT:
+    bool skipval = false;    
+  CODE:
+    RETVAL = THIS->Pulse(newmsg, &skipval);
+    if( skipval )
+        RETVAL = false;
+    
+  OUTPUT: RETVAL
 
+
+int
+wxProgressDialog::GetRange()
+
+int
+wxProgressDialog::GetValue()
+
+wxString
+wxProgressDialog::GetMessage()
+
+void
+wxProgressDialog::SetRange( maximum )
+    int maximum
+
+bool
+wxProgressDialog::WasCancelled()
+
+bool
+wxProgressDialog::WasSkipped()
 
 bool
 wxProgressDialog::Show( show = true )
 	bool show
 
-#endif
+#else
 
 bool
 wxProgressDialog::Update( value = -1, newmsg = wxEmptyString )
     int value
     wxString newmsg
 
+#if WXPERL_W_VERSION_GE( 2, 8, 0 )
 
-void
-wxProgressDialog::Resume()
+bool
+wxProgressDialog::Show( show = true )
+	bool show
 
+bool 
+wxProgressDialog::Pulse( newmsg = wxEmptyString )
+	wxString newmsg
 
+#endif
+
+#endif
